# kivecli

./: .gitignore  README.md  pyproject.toml  runkive.py
.github/workflows/: ci-reusable.yml  ci-scheduled.yml  main.yml
docs/: containers_upload.md
src/kivecli/: __main__.py  app.py  argumenttype.py  await_containerrrun.py  await_containerrun.py  batchid.py  check_rerun.py  collect_run_files.py  container.py  containerapp.py  containerappid.py  containerfamily.py  containerfamilyid.py  containerid.py  createpipelinejson.py  createzipapp.py  dataset.py  datasetid.py  datasetinfo.py  dirpath.py  download.py  escape.py  find_dataset.py  findapps.py  findbatches.py  findcontainer.py  findcontainerfamilies.py  finddatasets.py  findrun.py  findruns.py  inputfileorurl.py  kivebatch.py  kiverun.py  login.py  main.py  mainwrap.py  makecontainer.py  makefamily.py  md5checksum.py  parsecli.py  (+13 more)
tests/: test_basic.py  test_commands.py  test_run.py  test_url.py
