[project]
name = "kivecli"
version = "0.1.0"
description = "Collection of scripts to interact with the Kive platform."
authors = [
    {name = "Vitaliy Mysak", email = "vmysak@bccfe.ca"},
]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests",
    "kiveapi @ git+https://github.com/cfe-lab/Kive.git@v0.15#egg=kiveapi&subdirectory=api",
]

[project.scripts]
kivecli = "kivecli.__main__:cli"

[project.optional-dependencies]
test = [
    # Dependencies required for running the test suite
    "pytest>=6.0",
    "pytest-cov",
]
dev = [
    # Dependencies required for development (linting, type checking, etc.)
    "ruff",
    "mypy>=0.800",
]

[project.urls]
homepage = "https://github.com/Donaim/kivecli"
repository = "https://github.com/Donaim/kivecli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
files = ["src/kivecli", "tests"]
ignore_missing_imports = true
strict_optional = true
allow_untyped_calls = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
strict = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
# Exclude common directories
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable pycodestyle (E, W), pyflakes (F), and isort (I)
select = ["E", "F", "W"]

# Ignore specific rules if needed
ignore = []

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Ignore import violations in __init__.py files
"__init__.py" = ["F401"]
